activity log overflow fixed

--- a/frontend/src/assets/styles/cmps/_activity-list.scss
+++ b/frontend/src/assets/styles/cmps/_activity-list.scss
@@ -15,3 +15,8 @@
       padding-right: 15px;
 
   }
+
+  .task-details-activity {
+      max-height: 50vh;
+      overflow-y: scroll;
+  }
